--- a/index.html
+++ b/index.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>influencer</title>
-  <link rel="stylesheet" href="styles/style.css">
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>influencer</title>
+    <link rel="stylesheet" href="styles/style.css" />
+    <script
+      src="https://kit.fontawesome.com/18c0a8d05d.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body class="poppins-thin">
+    <header>
+      <div class="navbar display-flex" id="primary-color">
+        <h3 class="brand">Influencer products</h3>
+        <ul class="nav-links display-flex">
+          <!-- li.nav-item*6>a.nav-link -->
+          <li class="nav-item">
+            <a href="" class="nav-link" id="primary-color">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link" id="primary-color">Product</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link" id="primary-color">Sign up</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link" id="primary-color">Login</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link" id="primary-color"
+              ><i class="fa-solid fa-magnifying-glass"></i
+            ></a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link" id="primary-color"
+              ><i class="fa-solid fa-cart-shopping"></i
+            ></a>
+          </li>
+        </ul>
+      </div>
+    </header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
