--- a/index.html
+++ b/index.html
@@ -41,7 +41,29 @@
         </ul>
       </div>
     </header>
-    <main></main>
+    <main>
+      <!-- Start your Journey as Influencer -->
+      <section class="banner-section display-flex">
+        <div class="banner-text" id="primary-color">
+          <h2 class="banner-title">
+            Start your Journey as <br />
+            Influencer
+          </h2>
+          <p class="banner-subtitle">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab,
+            explicabo labore alias, aliquam, sunt voluptate excepturi officiis
+            dolorum sit cum accusantium ipsum quibusdam? Commodi tenetur, porro
+            error totam facilis laborum.
+          </p>
+          <button class="primary-btn">
+            Prebook Now <i class="fa-solid fa-arrow-right"></i>
+          </button>
+        </div>
+        <div class="banner-img">
+          <img src="images/main-camera.png" alt="" />
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
