--- a/index.html
+++ b/index.html
@@ -63,6 +63,18 @@
           <img src="images/main-camera.png" alt="" />
         </div>
       </section>
+      <!-- company logo -->
+      <section class="companys">
+        <div class="company-logos display-flex">
+          <img src="logos/Alibaba.svg" alt="" class="company-logo" />
+          <img src="logos/Amazon.svg" alt="" class="company-logo" />
+          <img src="logos/Daraz.pk Logo.svg" alt="" class="company-logo" />
+          <img src="logos/Ebay.svg" alt="" class="company-logo" />
+          <img src="logos/Rakuten.svg" alt="" class="company-logo" />
+          <img src="logos/Target.svg" alt="" class="company-logo" />
+          <img src="logos/Walmart.svg" alt="" class="company-logo" />
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
