Featured products at one place done

--- a/index.html
+++ b/index.html
@@ -64,15 +64,216 @@
         </div>
       </section>
       <!-- company logo -->
-      <section class="companys">
-        <div class="company-logos display-flex">
-          <img src="logos/Alibaba.svg" alt="" class="company-logo" />
-          <img src="logos/Amazon.svg" alt="" class="company-logo" />
-          <img src="logos/Daraz.pk Logo.svg" alt="" class="company-logo" />
-          <img src="logos/Ebay.svg" alt="" class="company-logo" />
-          <img src="logos/Rakuten.svg" alt="" class="company-logo" />
-          <img src="logos/Target.svg" alt="" class="company-logo" />
-          <img src="logos/Walmart.svg" alt="" class="company-logo" />
+      <section class="companys display-flex">
+        <img src="logos/Alibaba.svg" alt="" class="company-logo" />
+        <img src="logos/Amazon.svg" alt="" class="company-logo" />
+        <img src="logos/Daraz.pk Logo.svg" alt="" class="company-logo" />
+        <img src="logos/Ebay.svg" alt="" class="company-logo" />
+        <img src="logos/Rakuten.svg" alt="" class="company-logo" />
+        <img src="logos/Target.svg" alt="" class="company-logo" />
+        <img src="logos/Walmart.svg" alt="" class="company-logo" />
+      </section>
+      <!-- Popular Collection Section -->
+      <section class="popular-collection">
+        <div class="popular-collection-text">
+          <h3 class="popular-collection-title" id="primary-color">
+            Popular Collection
+          </h3>
+        </div>
+        <div class="popular-collection-card">
+          <div class="popular-card">
+            <img src="images/tripod.png" alt="" class="popular-card-img" />
+            <div class="popular-card-text">
+              <h3 class="popular-card-title">Flex Tripod</h3>
+              <p class="money">$50.48</p>
+
+              <span class="ratings">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+              </span>
+              <span style="color: rgb(94, 99, 102)">4.99</span>
+              <p class="popular-card-subtitle">
+                Wordwide shifting available Buyers protection possible!
+              </p>
+            </div>
+          </div>
+          <div class="popular-card">
+            <img src="images/mic.png" alt="" class="popular-card-img" />
+            <div class="popular-card-text">
+              <h3 class="popular-card-title">microphone</h3>
+              <p class="money">$120.48</p>
+
+              <span class="ratings">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+              </span>
+              <span style="color: rgb(94, 99, 102)">4.99</span>
+              <p class="popular-card-subtitle">
+                Wordwide shifting available Buyers protection possible!
+              </p>
+            </div>
+          </div>
+          <div class="popular-card">
+            <img src="images/airpod.png" alt="" class="popular-card-img" />
+            <div class="popular-card-text">
+              <h3 class="popular-card-title">Airbuds</h3>
+              <p class="money">$100.00</p>
+
+              <span class="ratings">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+              </span>
+              <span style="color: rgb(94, 99, 102)">4.99</span>
+              <p class="popular-card-subtitle">
+                Wordwide shifting available Buyers protection possible!
+              </p>
+            </div>
+          </div>
+          <div class="popular-card">
+            <img src="images/drone.png" alt="" class="popular-card-img" />
+            <div class="popular-card-text">
+              <h3 class="popular-card-title">Drone</h3>
+              <p class="money">$980</p>
+
+              <span class="ratings">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+              </span>
+              <span style="color: rgb(94, 99, 102)">4.99</span>
+              <p class="popular-card-subtitle">
+                Wordwide shifting available Buyers protection possible!
+              </p>
+            </div>
+          </div>
+          <div class="popular-card">
+            <img src="images/lights.png" alt="" class="popular-card-img" />
+            <div class="popular-card-text">
+              <h3 class="popular-card-title">Light Setup</h3>
+              <p class="money">$50.48</p>
+
+              <span class="ratings">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+              </span>
+              <span style="color: rgb(94, 99, 102)">4.99</span>
+              <p class="popular-card-subtitle">
+                Wordwide shifting available Buyers protection possible!
+              </p>
+            </div>
+          </div>
+          <div class="popular-card">
+            <img src="images/setup.png" alt="" class="popular-card-img" />
+            <div class="popular-card-text">
+              <h3 class="popular-card-title">Photoshoot set</h3>
+              <p class="money">$1200.00</p>
+
+              <span class="ratings">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+              </span>
+              <span style="color: rgb(94, 99, 102)">4.99</span>
+              <p class="popular-card-subtitle">
+                Wordwide shifting available Buyers protection possible!
+              </p>
+            </div>
+          </div>
+          <div class="popular-card">
+            <img src="images/camera.png" alt="" class="popular-card-img" />
+            <div class="popular-card-text">
+              <h3 class="popular-card-title">Vlogging Camera</h3>
+              <p class="money">$1800.80</p>
+
+              <span class="ratings">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+              </span>
+              <span style="color: rgb(94, 99, 102)">4.99</span>
+              <p class="popular-card-subtitle">
+                Wordwide shifting available Buyers protection possible!
+              </p>
+            </div>
+          </div>
+          <div class="popular-card">
+            <img
+              src="images/single-light.png"
+              alt=""
+              class="popular-card-img"
+            />
+            <div class="popular-card-text">
+              <h3 class="popular-card-title">Green Screen</h3>
+              <p class="money">$25.48</p>
+
+              <span class="ratings">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+              </span>
+              <span style="color: rgb(94, 99, 102)">4.99</span>
+              <p class="popular-card-subtitle">
+                Wordwide shifting available Buyers protection possible!
+              </p>
+            </div>
+          </div>
+          <div class="popular-card">
+            <img src="images/action.png" alt="" class="popular-card-img" />
+            <div class="popular-card-text">
+              <h3 class="popular-card-title">Action Camera</h3>
+              <p class="money">$380.48</p>
+
+              <span class="ratings">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+              </span>
+              <span style="color: rgb(94, 99, 102)">4.99</span>
+              <p class="popular-card-subtitle">
+                Wordwide shifting available Buyers protection possible!
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="see-more">
+          <a href="">See More <i class="fa-solid fa-arrow-right"></i></a>
+        </div>
+      </section>
+      <!-- Featured products at one place -->
+      <section class="feature-section display-flex">
+        <img src="images/gear.png" alt="" class="feature-img" />
+        <div class="feature-text">
+          <h3 class="feature-text-title">Featured products at one place</h3>
+          <p class="feature-text-subtitle">
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit. Exercitation
+            veniam consequat sunt nostrud amet.
+          </p>
+          <button class="btn-feature">
+            Join Now <i class="fa-solid fa-arrow-right"></i>
+          </button>
         </div>
       </section>
     </main>
