--- a/index.html
+++ b/index.html
@@ -277,6 +277,21 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer class="footer display-flex">
+      <div class="footer-text">
+        <h4 class="footer-title">Influencer products</h4>
+        <p class="footer-subtitle">
+          Copyright © 2020 influencer products <br />All rights reserved
+        </p>
+        <a href="" class="scocial-icon"
+          ><i class="fa-brands fa-facebook"></i
+        ></a>
+        <a href="" class="scocial-icon"
+          ><i class="fa-brands fa-instalod"></i
+        ></a>
+        <a href="" class="scocial-icon"><i class="fa-brands fa-twitter"></i></a>
+        <a href="" class="scocial-icon"><i class="fa-brands fa-youtube"></i></a>
+      </div>
+    </footer>
   </body>
 </html>
